--- a/basicShapes.html
+++ b/basicShapes.html
@@ -9,17 +9,19 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-    <button type="button" onclick="countClicks()">Click Me!</button>
+    <button type="button" onclick="countClicks('add')">Click Me!</button>
     <p id="counterDisplay">0</p>
   </body>
   <script type="text/javascript">
-
     var counter = 0;
+    function countClicks(action){
+      if (action == "add"){
+        counter++;
 
-    function countClicks(){
-      counter++;
-
-      document.getElementById("counterDisplay").innerHTML=counter;
+        document.getElementById("counterDisplay").innerHTML=counter;
+      }
     }
+
+
   </script>
 </html>
