--- a/basicShapes.html
+++ b/basicShapes.html
@@ -9,8 +9,14 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-    <button type="button" onclick="countClicks('add')">Click Me!</button>
-    <p id="counterDisplay">0</p>
+    <div>
+      <g>
+        <button type="button" onclick="countClicks('add')">Click Me!</button>
+        <p id="counterDisplay">0</p>
+      </g>
+    </div>
+    <div id="forCircle">
+    </div>
   </body>
   <script type="text/javascript">
     var counter = 0;
@@ -21,7 +27,21 @@
         document.getElementById("counterDisplay").innerHTML=counter;
       }
     }
+    margin = {top: 20, bottom: 20, left: 10, right: 10};
+    var width = 960 - margin.left - margin.right;
+    var height = 500 - margin.top - margin.bottom;
 
+    var circleSvg = d3.select("#forCircle").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+      .append("g").attr("transform", "translate("+margin.left+ ", "+margin.top+")");
 
+    var color = d3.scaleOrdinal(d3.schemeCategory10);
+
+    var circleData = [{"cx": 20, "cy": 20, "r": 5}, {"cx": 40, "cy": 40, "r": 5}, {"cx": 60, "cy": 60, "r": 5}];
+
+    var circles = circleSvg.selectAll("circle").data(circleData).enter().append("circle");
+    circles.attr("cx", function(d){return d.cx;}).attr("cy", function(d){return d.cy;}).attr("r", function(d){return d.r;})
+      .attr("fill", function(d, i){return color(i);});
   </script>
 </html>
