--- a/basicShapes.html
+++ b/basicShapes.html
@@ -38,9 +38,22 @@
 
     var color = d3.scaleOrdinal(d3.schemeCategory10);
 
-    var circleData = [{"cx": 20, "cy": 20, "r": 5}, {"cx": 40, "cy": 40, "r": 5}, {"cx": 60, "cy": 60, "r": 5}];
+    var circleArray = [];
 
-    var circles = circleSvg.selectAll("circle").data(circleData).enter().append("circle");
+    for(i = 0; i < d3.schemeCategory10.length; i++){
+      var circleDict ={};
+      circleDict.cx = i * 15;
+      circleDict.cy = 15;
+      circleDict.r = 10;
+
+      circleArray.push(circleDict);
+    }
+
+    console.log(circleArray);
+
+    //var circleData = [{"cx": 20, "cy": 20, "r": 5}, {"cx": 40, "cy": 40, "r": 5}, {"cx": 60, "cy": 60, "r": 5}];
+
+    var circles = circleSvg.selectAll("circle").data(circleArray).enter().append("circle");
     circles.attr("cx", function(d){return d.cx;}).attr("cy", function(d){return d.cy;}).attr("r", function(d){return d.r;})
       .attr("fill", function(d, i){return color(i);});
   </script>
